--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,20 @@
-* {
-    background-color: aliceblue;
+html {
+    background-color: salmon;
+}
+
+body {
+    margin: 50px;
+    background-color: lightblue;
+    padding: 20px;
+    border: 5px dotted yellow;
 }
 
 h1 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 56px;
     color: chocolate;
+    border-bottom: 5px dashed yellowgreen;
+    text-align: center;
 }
 
 h2 {
@@ -18,4 +27,18 @@ p, li {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 18px;
     color: darkgoldenrod;
+}
+
+.links {
+    display: inline-block;
+    padding: 8px;
+    margin: 8px; 
+    border: 3px dotted red;
+    width: 225px;
+    height: 20px;
+    text-align: center;
+    background-color: aqua;
+    color: blue;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: bold;
 }
